Make sure stdout and stderr pipe functional